<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_files" android:title="@string/menu_files"
        app:showAsAction="never" />
    <item android:id="@+id/action_run" android:title="@string/menu_run"
        app:showAsAction="never" />
    <item android:id="@+id/action_cloud_build" android:title="@string/menu_cloud_build"
        app:showAsAction="never" />
    <item android:id="@+id/action_build_status" android:title="@string/menu_build_status"
        app:showAsAction="never" />
    <item android:id="@+id/action_commit" android:title="@string/menu_commit"
        app:showAsAction="never" />
    <item android:id="@+id/action_push" android:title="@string/menu_push"
        app:showAsAction="never" />
    <item android:id="@+id/action_pull" android:title="@string/menu_pull"
        app:showAsAction="never" />
    <item android:id="@+id/action_new_repo" android:title="@string/menu_new_repo"
        app:showAsAction="never" />
    <item android:id="@+id/action_switch_repo" android:title="@string/menu_switch_repo"
        app:showAsAction="never" />
    <item android:id="@+id/action_sessions" android:title="@string/menu_sessions"
        app:showAsAction="never" />
    <item android:id="@+id/action_balance" android:title="@string/menu_balance"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/settings"
        app:showAsAction="never" />
</menu>
